--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
   <!-- 👍 YOUR HTML HERE 👍 -->
-
+<img id='inn' onclick="hero.health = 10"></img>
 
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
