--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
     <meta charset="utf-8">
     <title>Mocha Tests</title>
     <link href="lib/mocha.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css">
 </head>
 <body>
 
 
   <!-- 👍 YOUR HTML HERE 👍 -->
-<img id='inn' onclick="hero.health = 10"></img>
+<img id='inn' onclick="hero.health = 10" src='https://www.flaticon.com/premium-icon/icons/svg/586/586852.svg'>inn</img>
+<img id='dagger' onclick=pickUpItem(hero,weapon) src='https://static.thenounproject.com/png/96275-200.png'>dagger</img>
+<img id='bag' onclick=equipWeapon(hero,testweapon) src='https://cdn0.iconfinder.com/data/icons/shopping-122/48/Artboard_38-512.png'>bag</img>
 
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
